--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 </head>
 <body>
     <div class="container-main">
-        <div class="image-container u-margin-bottom u-display-block">
-            <div class="container-icon">
+        <div class="image-container bottom-margin display-block">
+            <div class="icon-container
+            ">
                 <img src="/images/icon-star.svg" alt="" class="icon">
             </div>
         </div>
         <section class="main-section">
-            <div class="text-container u-display-block">
-                <h2 class="heading-secondary u-margin-bottom u-display-block">How did we do?</h2>
-                <p class="u-margin-bottom u-display-block">Please let us know how we did with your support request. All feedback is dedicated to help us improve our offering.</p>
+            <div class="text-container display-block">
+                <h2 class="display-message-heading bottom-margin display-block">How did we do?</h2>
+                <p class="bottom-margin display-block">Please let us know how we did with your support request. All feedback is dedicated to help us improve our offering.</p>
             </div>
-            <div class="rating-container u-margin-bottom u-display-block">
+            <div class="rating-container bottom-margin display-block">
                 <input type="radio" id="rating-1" class="rating-input" name="rating-btn" value="1"/>
                 <label for="rating-1" class="btn-rating text-center">1</label>
                 <input type="radio" id="rating-2" class="rating-input" name="rating-btn" value="2"/>
@@ -33,7 +34,7 @@
                 <input type="radio" id="rating-5" class="rating-input" name="rating-btn" value="5"/>
                 <label for="rating-5" class="btn-rating text-center">5</label>
             </div>
-            <input type="submit" id="btn-submit" class="u-display-block" value="Submit">
+            <input type="submit" id="btn-submit" class="display-block" value="Submit">
         </section>
     </div>
     <script src="script.js"></script>
