refactor: Update HTML and CSS for interactive rating component
- Updated HTML structure to improve semantics and accessibility
- Refactored CSS classes for better organization and readability
- Fixed typos and improved consistency in class names
- Modified JavaScript code for better event handling and readability
- Added comments for clarity and documentation
- Updated image paths and URLs for better integration

This commit enhances the codebase of the interactive rating component by refactoring and improving the structure, styling, and functionality. The changes aim to improve maintainability, readability, and user experience.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <div class="container-main">
         <div class="image-container bottom-margin display-block">
-            <div class="icon-container
-            ">
+            <div class="icon-container">
                 <img src="/images/icon-star.svg" alt="" class="icon">
             </div>
         </div>
