Refactor interactive rating component styling and behavior
Updated HTML structure and CSS styles for better layout and visual presentation of the interactive rating component. Also, improved JavaScript functionality for handling user input and displaying feedback messages after submission.

--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 </head>
 <body>
     <div class="container-main">
-        <div class="image-container bottom-margin display-block">
+        <div class="image-container display-block">
             <div class="icon-container">
                 <img src="/images/icon-star.svg" alt="" class="icon">
             </div>
         </div>
         <section class="main-section">
             <div class="text-container display-block">
-                <h2 class="display-message-heading bottom-margin display-block">How did we do?</h2>
-                <p class="bottom-margin display-block">Please let us know how we did with your support request. All feedback is dedicated to help us improve our offering.</p>
+                <h2>How did we do?</h2>
+                <p>Please let us know how we did with your support request. All feedback is dedicated to help us improve our offering!</p>
             </div>
-            <div class="rating-container bottom-margin display-block">
+            <div class="rating-container display-block">
                 <input type="radio" id="rating-1" class="rating-input" name="rating-btn" value="1"/>
-                <label for="rating-1" class="btn-rating text-center">1</label>
+                <label for="rating-1" class="ratingBtn text-center">1</label>
                 <input type="radio" id="rating-2" class="rating-input" name="rating-btn" value="2"/>
-                <label for="rating-2" class="btn-rating text-center">2</label>
+                <label for="rating-2" class="ratingBtn text-center">2</label>
                 <input type="radio" id="rating-3" class="rating-input" name="rating-btn" value="3"/>
-                <label for="rating-3" class="btn-rating text-center">3</label>
+                <label for="rating-3" class="ratingBtn text-center">3</label>
                 <input type="radio" id="rating-4" class="rating-input" name="rating-btn" value="4"/>
-                <label for="rating-4" class="btn-rating text-center">4</label>
+                <label for="rating-4" class="ratingBtn text-center">4</label>
                 <input type="radio" id="rating-5" class="rating-input" name="rating-btn" value="5"/>
-                <label for="rating-5" class="btn-rating text-center">5</label>
+                <label for="rating-5" class="ratingBtn text-center">5</label>
             </div>
-            <input type="submit" id="btn-submit" class="display-block" value="Submit">
         </section>
+        <input type="submit" id="submitBtn" class="display-block" value="Submit">
     </div>
     <script src="script.js"></script>
 </body>
